# Barsic3-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-original  README.md  SECURITY.md  add_attendance_report_groups.py  alembic.ini  attendance_report_groups.json  barsic_web-dev.sh  barsic_web.sh  barsicreport2.ini  constants.py  docker-compose-dev-without-app.yml  docker-compose-dev.yml  docker-compose-local.yml  docker-compose.yml  get_yadisk_token.py  main.py  new_report_groups.json  parse_old_reports.py  pyproject.toml  requirements.txt  tariff_config.csv
.github/workflows/: codeql.yml  dependabot.yml  pull_request.yml  tag.yml
api/v1/: __init__.py  bars.py  google_report_ids.py  report_elements.py  report_groups.py  report_name.py  report_settings.py  reports.py
core/: settings.py
data/: group_for_itogreport.xml  list_google_docs.csv  org_for_report.xml  org_plat_agent.xml
db/: mssql.py  postgres.py
dev/: barsic.dump
dev/mssql_scripts/: restore.sh
gateways/: telegram.py
legacy/: barsicreport2.py  functions.py  to_google_sheets.py
middleware/: exceptions.py
migrations/versions/: 070523e07d59_init.py  09c6cef03166_init.py  0ce804d34c21_modify_google_report_table.py  21bb69ba60bd_init.py  257859d54620_init.py  2ffc1af2d2c2_init.py  39c548457c1a_init.py  5d5fb5d75513_init.py  6fc88f24054f_add_google_report_id_model.py  8e0da5a11723_init.py  b5099e79af78_init.py  bf10be041959_init.py  cba87c2c864c_init.py  fb3c79908d07_init.py  fe92ba674a75_init.py
models/: __init__.py  mixins.py  report.py  report_cache.py  user.py
repositories/: bars.py  base.py  google.py  rk.py  yandex.py
schemas/: __init__.py  bars.py  base.py  google_report_ids.py  mixins.py  report.py  report_cache.py  rk.py  total_report.py  user.py
services/: bars.py  report_config.py  reports.py  rk.py  settings.py  workers.py
sql/: category.py  clients_count.py  customer_count.py  get_companies.py  rk_smile_request.py  sp_report_totals_v2.py  super_account.py  transactions.py  zone_in_count.py
src/configs/: site.conf
utils/: backoff.py
