[tool.poetry]
name = "barsic-web"
version = "0.1.0"
description = ""
authors = ["Ivan Bazhenov <iv.bazhenov@vk.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
redis = "^5.0.1"
orjson = "^3.9.14"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.1.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
asyncpg = "^0.29.0"
email-validator = "^2.1.0.post1"
aioodbc = "^0.5.0"
lxml = "^5.1.0"
openpyxl = "^3.1.2"
python-dateutil = "^2.8.2"
yadisk = "^2.1.0"
requests = "^2.31.0"
google-api-python-client = "1.7.7"
oauth2client = "^4.1.3"
aiogram = "^3.4.1"
gspread = "^6.0.2"
gspread-formatting = "^1.1.2"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
