[project]
name = "barsic-web"
version = "3.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Ivan Bazhenov", email = "iv.bazhenov@vk.team" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.109.2,<0.110.0)",
    "redis (>=5.0.1,<6.0.0)",
    "orjson (>=3.9.14,<4.0.0)",
    "alembic (>=1.13.1,<2.0.0)",
    "sqlalchemy (>=2.0.27,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "email-validator (>=2.1.0.post1,<3.0.0)",
    "aioodbc (>=0.5.0,<0.6.0)",
    "lxml (>=5.1.0,<6.0.0)",
    "openpyxl (>=3.1.2,<4.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)",
    "yadisk (>=2.1.0,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "google-api-python-client (==1.7.7)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "aiogram (>=3.4.1,<4.0.0)",
    "gspread (>=6.0.2,<7.0.0)",
    "gspread-formatting (>=1.1.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "greenlet (>=3.3.1,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.linters.dependencies]
ruff = "^0.11.2"

[tool.poetry.group.types.dependencies]
mypy = "^1.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
attrs = "^25.4.0"

[tool.pytest.ini_options]
addopts = "-rfs"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning:",
    "ignore:getName() is deprecated:DeprecationWarning",
    "ignore:currentThread() is deprecated:DeprecationWarning"
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["tests", "migrations"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D",
    "RUF",
    "UP007",
    "UP",
    "TD002",
    "TD003",
    "A003",
    "EXE",
    "ERA",
    "FIX002",
    "PLR0913",
    "PLR2004",
    "PGH003",
    "INP001",
    "DTZ005",
    "S501",
    "TRY401",
    "EM101",
    "FBT001",
    "FBT002",
    "BLE001",
    "COM812",
    "G004",
    "FBT003",
    "S104",
    "S608",
    "TRY400",
    "B009",
    "N805",
    "PGH004",
    "TRY003",
    "PLR0912",
    "PLR0911",
]


[tool.ruff.lint.pylint]
max-statements = 150


[tool.ruff.lint.mccabe]
max-complexity = 50


[tool.mypy]
python_version = "3.11"
packages = ["source"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
follow_imports = "silent"
warn_return_any = false
warn_unused_configs = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "migrations",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "tests",
]

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = [".venv"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
